# PodcastAnything-Local

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  integration-hosted.yml  integration-local.yml  release.yml
scripts/: test_elevenlabs_live.py  test_ollama_local.py  test_openai_live.py  test_piper_local.py
src/podcast_anything_local/: __init__.py  cli.py  main.py  web.py
src/podcast_anything_local/api/: routes.py
src/podcast_anything_local/core/: config.py
src/podcast_anything_local/db/: models.py  repository.py
src/podcast_anything_local/jobs/: __init__.py  audio_streams.py  events.py  executor.py
src/podcast_anything_local/providers/rewrite/: __init__.py  base.py  demo.py  ollama.py  openai_compatible.py  prompting.py
src/podcast_anything_local/providers/tts/: base.py  elevenlabs.py  openai.py  piper.py  wav_utils.py  wave.py
src/podcast_anything_local/schemas/: config.py  jobs.py
src/podcast_anything_local/services/: audio.py  document_pipeline.py  ingestion.py  pipeline.py  rewrite.py
src/podcast_anything_local/storage/: artifacts.py
src/podcast_anything_local/web_assets/: app.js  index.html  styles.css
tests/: test_api.py  test_artifacts.py  test_audio_service.py  test_cli.py  test_document_pipeline.py  test_ingestion.py  test_rewrite_ollama.py  test_rewrite_openai.py  test_rewrite_service.py  test_tts_elevenlabs.py  test_tts_openai.py  test_tts_piper.py  test_ui.py
