[project]
name = "podcast-anything-local"
version = "0.1.0"
description = "Local-first backend for turning URLs and documents into podcast scripts and audio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "docx2txt>=0.8",
  "fastapi>=0.115.0",
  "pypdf>=5.4.0",
  "python-pptx>=1.0.2",
  "python-multipart>=0.0.9",
  "requests>=2.32.3",
  "trafilatura>=2.0.0",
  "uvicorn[standard]>=0.34.0",
  "youtube-transcript-api>=0.6.3",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
]
piper = [
  "piper-tts>=1.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_anything_local"]

[tool.pytest.ini_options]
testpaths = ["tests"]
